import { graphql } from 'graphql';
import { fetch } from 'apollo-server-env';
import ApollosConfig from '@apollosproject/config';
import { createTestHelpers } from '@apollosproject/server-core/lib/testUtils';
import { peopleSchema } from '@apollosproject/data-schema';

import * as AuthSms from '../index';
import * as Auth from '../../auth/index';
import { generateToken, registerToken } from '../../auth/token';

ApollosConfig.loadJs({
  ROCK: {
    API_URL: 'https://apollosrock.newspring.cc/api',
    API_TOKEN: 'some-rock-token',
  },
});

const sendSms = jest.fn();

class SmsDataSource {
  initialize(){};
  sendSms = sendSms;
}

const Sms = {
  dataSource: SmsDataSource,
}

const { getContext, getSchema } = createTestHelpers({ Auth, AuthSms, Sms });

describe('AuthSms schema', () => {
  let schema;
  let context;
  beforeEach(() => {
    fetch.resetMocks();
    fetch.mockRockDataSourceAPI();
    schema = getSchema([peopleSchema]);
    context = getContext();
    sendSms.mockClear();
  });

  it('requests an SMS pin without an existing user login', async () => {
    const query = `
      mutation {
        requestSmsLoginPin(phoneNumber: "5133061126") { success }
      }
    `;
    const rootValue = {};


    const getMock = jest.fn(() => (Promise.resolve([])));
    const deleteMock = jest.fn();
    const postMock = jest.fn();


    context.dataSources.AuthSms.get = getMock
    context.dataSources.AuthSms.delete = deleteMock;
    context.dataSources.AuthSms.post = postMock;
    context.dataSources.AuthSms.generateSmsPinAndPassword = jest.fn(() => '123password');

    const result = await graphql(schema, query, rootValue, context);
    expect(result).toMatchSnapshot();
    expect(getMock.mock.calls).toMatchSnapshot('get existing login');
    expect(deleteMock.mock.calls).toMatchSnapshot('delete existing login');
    expect(postMock.mock.calls).toMatchSnapshot('create new login');
    expect(sendSms.mock.calls).toMatchSnapshot('send sms');
  });

  it('requests an SMS pin with an existing user login', async () => {
    const query = `
      mutation {
        requestSmsLoginPin(phoneNumber: "5133061126") { success }
      }
    `;
    const rootValue = {};


    const getMock = jest.fn(() => (Promise.resolve([{ id: 123 }])));
    const deleteMock = jest.fn();
    const postMock = jest.fn();


    context.dataSources.AuthSms.get = getMock
    context.dataSources.AuthSms.delete = deleteMock;
    context.dataSources.AuthSms.post = postMock;
    context.dataSources.AuthSms.generateSmsPinAndPassword = jest.fn(() => '123password');

    const result = await graphql(schema, query, rootValue, context);
    expect(result).toMatchSnapshot();
    expect(getMock.mock.calls).toMatchSnapshot('get existing login');
    expect(deleteMock.mock.calls).toMatchSnapshot('delete existing login');
    expect(postMock.mock.calls).toMatchSnapshot('create new login');
    expect(sendSms.mock.calls).toMatchSnapshot('send sms');
  });

  it('generates a new password each time', () => {
    const { pin: pin1, password: password1 } = context.dataSources.AuthSms.generateSmsPinAndPassword();
    const { pin: pin2, password: password2 } = context.dataSources.AuthSms.generateSmsPinAndPassword();
    expect(pin1).not.toBe(pin2);
    expect(pin1.length).toBe(6);
    expect(typeof pin1).toBe('string');
  })
});
