// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthSms schema logs a new user in via their phone number and pin 1`] = `
Object {
  "data": Object {
    "authenticateWithSms": Object {
      "token": "foo",
    },
  },
}
`;

exports[`AuthSms schema logs an existing user in via their phone number and pin 1`] = `
Object {
  "data": Object {
    "authenticateWithSms": Object {
      "token": "foo",
    },
  },
}
`;

exports[`AuthSms schema requests an SMS pin with an existing user login 1`] = `
Object {
  "data": Object {
    "requestSmsLoginPin": Object {
      "success": true,
    },
  },
}
`;

exports[`AuthSms schema requests an SMS pin without an existing user login 1`] = `
Object {
  "data": Object {
    "requestSmsLoginPin": Object {
      "success": true,
    },
  },
}
`;

exports[`AuthSms schema throws an error if the user login is not found 1`] = `
Object {
  "data": Object {
    "authenticateWithSms": null,
  },
  "errors": Array [
    [GraphQLError: Invalid input],
  ],
}
`;

exports[`AuthSms schema throws an error on invalid phone numbers 1`] = `
Object {
  "data": Object {
    "requestSmsLoginPin": null,
  },
  "errors": Array [
    [GraphQLError: 30123 is not a valid phone number],
  ],
}
`;
